# smart-qa-application

./: app.py  pyproject.toml
config/: settings.py
docs/: 01-项目架构设计与环境搭建-从零构建生产级RAG系统.md  02-配置中心-双模式LLM的统一管理与灵活切换.md  03-统一LLM客户端-Ollama与在线API的无缝集成.md  04-FAISS向量存储-构建高性能语义检索引擎.md  05-辅助工具类上-装饰器与文档处理器的实战应用.md  06-辅助工具类下-天气查询聊天历史与UI组件.md  07-Agentic-RAG核心-ReAct智能代理的完整实现.md  08-Streamlit-Web应用-打造生产级智能问答界面.md  09-系统集成测试与生产环境部署优化.md  README.md
docs-old/: 11-Web应用架构设计-从混合RAG到生产级系统.md  12-辅助工具类-聊天历史、装饰器与UI组件.md  13-工具类实现-天气查询与文档处理.md  14-双模式LLM集成-本地与云端的灵活切换.md  15-FAISS向量存储-高性能检索引擎.md  16-Agent工具系统-ReAct框架与LangChain集成.md  17-Streamlit界面开发-打造友好的用户体验.md  18-生产环境部署与性能调优-完整项目总结.md
models/: agent.py
services/: llm_client.py  vector_store.py  weather_tools.py
utils/: chat_history.py  decorators.py  document_processor.py  ui_components.py
vector_store/: faiss_index_docs.pkl  faiss_index_metadata.json
vector_store/faiss_index/: index.faiss  index.pkl
