[project]
name = "agentic-rag-smart-qa"
version = "2.0.0"
description = "Agentic RAG智能问答系统 - 生产级Web应用，支持双模式LLM（Ollama本地 + 在线API）"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    {name = "fwytech", email = "fwytech@126.com"}
]

dependencies = [
    # Web 框架
    "streamlit>=1.29.0",
    # AI 框架
    "langchain>=0.2.0",
    "langchain-community>=0.2.0",
    "langchain-core>=0.1.0",
    # 向量数据库
    "faiss-cpu>=1.8.0",
    # LLM 客户端
    "ollama==0.1.7",
    "openai>=1.0.0",
    # 文档处理
    "pypdf==6.1.3",
    "python-docx==1.1.0",
    "unstructured>=0.12.0",
    # HTTP 请求
    "requests==2.32.4",
    "urllib3==2.1.0",
    # 数据处理
    "numpy>=1.27.0",
    "pandas>=2.2.0",
    # 可视化
    "plotly==5.18.0",
    # 机器学习
    "sentence-transformers>=2.0.0",
    "torch>=2.2.0",
    "transformers>=4.36.0",
    # 浏览器自动化
    "selenium>=4.15.0,<5.0.0",
    "webdriver-manager>=4.0.0,<5.0.0",
    # 其他工具
    "python-dotenv>=1.0.0,<2.0.0",
    "json5>=0.9.0,<1.0.0",
    "markdown>=3.5.0,<4.0.0",
    "tiktoken>=0.12.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["config*", "services*", "utils*"]
exclude = ["data*", "files*"]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
